# Beez

./: .gitignore  Makefile  PATCH_NOTES.md  PATCH_README.txt  README.md  README_PATCH.md  cite_software.py  pyproject.toml  run.sh
runs/20250831-214900/: frames.csv
runs/20250831-214919/: frames.csv
runs/20250831-214923/: frames.csv
runs/20250831-215315/: frames.csv
runs/20250831-221239/: frames.csv
runs/20250831-221743/: frames.csv
runs/20250831-221804/: frames.csv
runs/20250831-222027/: frames.csv
runs/20250831-222330/: frames.csv
runs/20250831-222732/: frames.csv
runs/20250831-223732/: frames.csv
src/: out.gv
src/bee_sim/: __init__.py  api.py  main.py
src/bee_sim/communication/: recruitment.py
src/bee_sim/domain/agents/: __init__.py  bee.py  drone.py  queen.py  roles.py  worker.py
src/bee_sim/domain/agents/behaviors/: communication.py
src/bee_sim/domain/colony/: brood.py  hive.py
src/bee_sim/domain/communication/: __init__.py  bus.py  signals.py
src/bee_sim/domain/environment/: flowers.py  weather.py  world.py
src/bee_sim/io/: logging.py  persistence.py
src/bee_sim/io/config/: default.yaml
src/bee_sim/telemetry/: serve.py  sse_server.py  ws_server.py
src/bee_sim/webui/: app.js  index.html  metrics.client.js  metrics.html  style.css  ws_client.js
tests/: conftest.py  run_sanity.py  test_phase_b_sanity.py
